--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -41,14 +41,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionResult.cs" />
     <Compile Include="BusinessManager.cs" />
     <Compile Include="Entities\ISceneEntity.cs" />
     <Compile Include="Entities\SceneEntity.cs" />
     <Compile Include="Factories\CameraFactory.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Factories\SceneContentFactory.cs" />
-    <Compile Include="IActionResult.cs" />
     <Compile Include="Importers\IGeometryImporter.cs" />
     <Compile Include="Pools\GeometryImportersPool.cs" />
     <Compile Include="Importers\WavefrontFormatImporter.cs" />
@@ -90,9 +88,9 @@
       <Project>{5ef45533-e2c7-46f2-b4a3-b8f36cd406e0}</Project>
       <Name>SharpGL %28SharpGL\SharpGL%29</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VirtualScene.BusinessComponents.Common\VirtualScene.BusinessComponents.Common.csproj">
-      <Project>{0DEFBE63-AC89-4476-BEB2-1D8ECCA08484}</Project>
-      <Name>VirtualScene.BusinessComponents.Common</Name>
+    <ProjectReference Include="..\VirtualScene.Common\VirtualScene.Common.csproj">
+      <Project>{3174F130-2690-4751-A37E-2610E3FEC93A}</Project>
+      <Name>VirtualScene.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
