--- a/VirtualScene.EntityBusinessComponents/VirtualScene.EntityBusinessComponents.csproj
+++ b/VirtualScene.EntityBusinessComponents/VirtualScene.EntityBusinessComponents.csproj
@@ -52,13 +52,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VirtualScene.BusinessComponents.Common\VirtualScene.BusinessComponents.Common.csproj">
-      <Project>{0DEFBE63-AC89-4476-BEB2-1D8ECCA08484}</Project>
-      <Name>VirtualScene.BusinessComponents.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\VirtualScene.BusinessComponents.Core\VirtualScene.BusinessComponents.Core.csproj">
       <Project>{5BEF2E8C-0895-4A9B-A530-F46CB3793CBE}</Project>
       <Name>VirtualScene.BusinessComponents.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VirtualScene.Common\VirtualScene.Common.csproj">
+      <Project>{3174F130-2690-4751-A37E-2610E3FEC93A}</Project>
+      <Name>VirtualScene.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\VirtualScene.EntityDataComponents\VirtualScene.EntityDataComponents.csproj">
       <Project>{9A526519-2BD9-42E1-BAD8-FDA5A3A2BE4C}</Project>
