--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,8 @@
   <repository path="..\..\..\..\Core\SharpGL.Serialization\packages.config" />
   <repository path="..\..\..\..\Core\SharpGL.WPF\packages.config" />
   <repository path="..\..\..\..\Core\SharpGL\packages.config" />
+  <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.SceneGraph\packages.config" />
+  <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.Serialization\packages.config" />
+  <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.WPF\packages.config" />
+  <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL\packages.config" />
 </repositories>
