--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -38,10 +38,13 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessManager.cs" />
+    <Compile Include="Entities\GeometryEqualityHelper.cs" />
+    <Compile Include="Entities\GeometryPrimitiveFactory.cs" />
     <Compile Include="Entities\ISceneEntity.cs" />
     <Compile Include="Entities\SceneEntity.cs" />
     <Compile Include="Factories\CameraFactory.cs" />
