Components were rearranged to exclude wrong references between layers. Load of saved stage is implemented - transformations are not applied (a bug registered).

--- a/VirtualScene.Application.WPF/VirtualScene.Application.WPF.csproj
+++ b/VirtualScene.Application.WPF/VirtualScene.Application.WPF.csproj
@@ -107,6 +107,10 @@
       <Project>{3174F130-2690-4751-A37E-2610E3FEC93A}</Project>
       <Name>VirtualScene.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VirtualScene.Entities\VirtualScene.Entities.csproj">
+      <Project>{64B7F7F7-FF47-46C4-B7F8-0466ECCE39BA}</Project>
+      <Name>VirtualScene.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VirtualScene.PresentationComponents.WPF\VirtualScene.PresentationComponents.WPF.csproj">
       <Project>{92C10EDB-A772-4BE8-8900-5B6744BD659D}</Project>
       <Name>VirtualScene.PresentationComponents.WPF</Name>
