--- a/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
+++ b/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveHierarchyBuilder.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveManager.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\IArchiveEntry.cs" />
+    <Compile Include="DataAdapters\FileSystem\Constants.cs" />
     <Compile Include="DataAdapters\FileSystem\FileSystemDataAdapter.cs" />
     <Compile Include="DataAdapters\FileSystem\FileSystemEnvironmentWrapper.cs" />
     <Compile Include="DataAdapters\FileSystem\IFileSystemDataAdapter.cs" />
@@ -80,13 +81,13 @@
       <Project>{47BCAA39-EDAD-4404-B6BD-4742B0ABB523}</Project>
       <Name>SharpGL.SceneGraph</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VirtualScene.BusinessComponents.Core\VirtualScene.BusinessComponents.Core.csproj">
-      <Project>{5BEF2E8C-0895-4A9B-A530-F46CB3793CBE}</Project>
-      <Name>VirtualScene.BusinessComponents.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\VirtualScene.Common\VirtualScene.Common.csproj">
       <Project>{3174F130-2690-4751-A37E-2610E3FEC93A}</Project>
       <Name>VirtualScene.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VirtualScene.Entities\VirtualScene.Entities.csproj">
+      <Project>{64B7F7F7-FF47-46C4-B7F8-0466ECCE39BA}</Project>
+      <Name>VirtualScene.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
