--- a/VirtualScene.DataComponents.TestSuite/VirtualScene.DataComponents.TestSuite.csproj
+++ b/VirtualScene.DataComponents.TestSuite/VirtualScene.DataComponents.TestSuite.csproj
@@ -74,6 +74,10 @@
       <Project>{C55E5ED1-54D2-4A29-8908-2C3CC9F665CD}</Project>
       <Name>VirtualScene.DataComponents.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VirtualScene.Entities\VirtualScene.Entities.csproj">
+      <Project>{64B7F7F7-FF47-46C4-B7F8-0466ECCE39BA}</Project>
+      <Name>VirtualScene.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VirtualScene.EntityDataComponents\VirtualScene.EntityDataComponents.csproj">
       <Project>{9A526519-2BD9-42E1-BAD8-FDA5A3A2BE4C}</Project>
       <Name>VirtualScene.EntityDataComponents</Name>
