--- a/VirtualScene.Entities/VirtualScene.Entities.csproj
+++ b/VirtualScene.Entities/VirtualScene.Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6D2F88A3-2115-44BE-B563-9460A0AF55B1}</ProjectGuid>
+    <ProjectGuid>{64B7F7F7-FF47-46C4-B7F8-0466ECCE39BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VirtualScene.UnitTesting.Common</RootNamespace>
-    <AssemblyName>VirtualScene.UnitTesting.Common</AssemblyName>
+    <RootNamespace>VirtualScene.Entities</RootNamespace>
+    <AssemblyName>VirtualScene.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,29 +30,32 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Moq">
-      <HintPath>..\Libs\Moq.dll</HintPath>
-    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helper.cs" />
+    <Compile Include="GeometryEqualityHelper.cs" />
+    <Compile Include="ISceneEntity.cs" />
+    <Compile Include="ISceneNavigator.cs" />
+    <Compile Include="IStage.cs" />
+    <Compile Include="MoveEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SceneEntity.cs" />
+    <Compile Include="SceneNavigator.cs" />
+    <Compile Include="Stage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VirtualScene.Common\VirtualScene.Common.csproj">
-      <Project>{3174F130-2690-4751-A37E-2610E3FEC93A}</Project>
-      <Name>VirtualScene.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\VirtualScene.DataComponents.Common\VirtualScene.DataComponents.Common.csproj">
-      <Project>{C55E5ED1-54D2-4A29-8908-2C3CC9F665CD}</Project>
-      <Name>VirtualScene.DataComponents.Common</Name>
+    <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.SceneGraph\SharpGL.SceneGraph.csproj">
+      <Project>{47BCAA39-EDAD-4404-B6BD-4742B0ABB523}</Project>
+      <Name>SharpGL.SceneGraph</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
