--- a/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
+++ b/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
@@ -44,11 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataAdapters\DataAdaptersPool.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveEntry.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveEntryNames.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveHierarchyBuilder.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\ArchiveManager.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\StageArchiveManager.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\IArchiveEntry.cs" />
     <Compile Include="DataAdapters\FileSystem\Constants.cs" />
     <Compile Include="DataAdapters\FileSystem\FileSystemDataAdapter.cs" />
@@ -57,6 +56,7 @@
     <Compile Include="DataAdapters\FileSystem\StageFileSystemDataAdapter.cs" />
     <Compile Include="DataAdapters\IDataAdapter.cs" />
     <Compile Include="DataAdapters\TypeInfo.cs" />
+    <Compile Include="Exceptions\DataAdapterConfigurationException.cs" />
     <Compile Include="Exceptions\FileFoundWhenDirectoryExpectedException.cs" />
     <Compile Include="Exceptions\FileSystemException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
