Transformation of Quadric SceneElements is saved/loaded.

--- a/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
+++ b/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
@@ -47,15 +47,23 @@
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveEntry.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveEntryNames.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveHierarchyBuilder.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\EntityPackerManager.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\EntityPacker.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\IEntityPacker.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\NullEntityPacker.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\PolygonEntityPacker.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\QuadricEntityPacker.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\SceneElementEntityPackerBase.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Packers\TypeInfoPacker.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\StageArchiveManager.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\IArchiveEntry.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\XmlSerializerPool.cs" />
     <Compile Include="DataAdapters\FileSystem\Constants.cs" />
     <Compile Include="DataAdapters\FileSystem\FileSystemDataAdapter.cs" />
     <Compile Include="DataAdapters\FileSystem\FileSystemEnvironmentWrapper.cs" />
     <Compile Include="DataAdapters\FileSystem\IFileSystemDataAdapter.cs" />
     <Compile Include="DataAdapters\FileSystem\StageFileSystemDataAdapter.cs" />
     <Compile Include="DataAdapters\IDataAdapter.cs" />
-    <Compile Include="DataAdapters\TypeInfo.cs" />
     <Compile Include="Exceptions\DataAdapterConfigurationException.cs" />
     <Compile Include="Exceptions\FileFoundWhenDirectoryExpectedException.cs" />
     <Compile Include="Exceptions\FileSystemException.cs" />
