--- a/VirtualScene.Entities/VirtualScene.Entities.csproj
+++ b/VirtualScene.Entities/VirtualScene.Entities.csproj
@@ -48,15 +48,28 @@
     <Compile Include="IStage.cs" />
     <Compile Include="MoveEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SceneEntity.cs" />
     <Compile Include="SceneNavigator.cs" />
     <Compile Include="Stage.cs" />
+    <Compile Include="Transformation.cs" />
+    <Compile Include="TypeInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.SceneGraph\SharpGL.SceneGraph.csproj">
       <Project>{47BCAA39-EDAD-4404-B6BD-4742B0ABB523}</Project>
       <Name>SharpGL.SceneGraph</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
