--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -95,7 +95,9 @@
       <Name>VirtualScene.Entities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Events\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
