Logic for selection of items in scene-content view are implemented.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -8,4 +8,6 @@
   <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.Serialization\packages.config" />
   <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL.WPF\packages.config" />
   <repository path="..\..\SharpGL\sharpgl-master\source\SharpGL\Core\SharpGL\packages.config" />
+  <repository path="..\VirtualScene.Application.WPF\packages.config" />
+  <repository path="..\VirtualScene.EntityPresentationComponents.WPF\packages.config" />
 </repositories>
