--- a/VirtualScene.Common/VirtualScene.Common.csproj
+++ b/VirtualScene.Common/VirtualScene.Common.csproj
@@ -41,12 +41,14 @@
   <ItemGroup>
     <Compile Include="ActionResult.cs" />
     <Compile Include="IActionResult.cs" />
+    <Compile Include="IProxyHolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ProxyManagerBase.cs" />
     <Compile Include="ServiceLocator.cs" />
   </ItemGroup>
   <ItemGroup>
