--- a/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
+++ b/VirtualScene.BusinessComponents.Core/VirtualScene.BusinessComponents.Core.csproj
@@ -42,21 +42,23 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessManager.cs" />
+    <Compile Include="Controllers\ICollectionItemsOperationSubscriber.cs" />
+    <Compile Include="Controllers\ISubscriberSetController.cs" />
+    <Compile Include="Controllers\NullSubscriberSetController.cs" />
+    <Compile Include="Controllers\SubscriberSetController.cs" />
+    <Compile Include="Managers\CollectionNotificationControllerManager.cs" />
+    <Compile Include="Managers\SceneContentBusinessManager.cs" />
     <Compile Include="Entities\ISceneContent.cs" />
     <Compile Include="Entities\SceneContent.cs" />
-    <Compile Include="Events\ICollectionChangedSubscriber.cs" />
     <Compile Include="Factories\CameraFactory.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Factories\CylinderFactory.cs" />
     <Compile Include="Factories\GearFactory.cs" />
     <Compile Include="Factories\GeometryFactoryBase.cs" />
     <Compile Include="Factories\GeometryPrimitiveFactory.cs" />
-    <Compile Include="Factories\SceneContentFactory.cs" />
     <Compile Include="Importers\IGeometryImporter.cs" />
     <Compile Include="Pools\GeometryImportersPool.cs" />
     <Compile Include="Importers\WavefrontFormatImporter.cs" />
-    <Compile Include="Factories\SceneEngineFactory.cs" />
     <Compile Include="ISceneEngine.cs" />
     <Compile Include="Factories\SceneNavigationFactory.cs" />
     <Compile Include="Validators\SceneArgumentValidator.cs" />
