--- a/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
+++ b/VirtualScene.DataComponents.Common/VirtualScene.DataComponents.Common.csproj
@@ -47,14 +47,14 @@
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveEntry.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveEntryNames.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\ArchiveHierarchyBuilder.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\EntityPackerManager.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\EntityPacker.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\IEntityPacker.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\NullEntityPacker.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\PolygonEntityPacker.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\QuadricEntityPacker.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\SceneElementEntityPackerBase.cs" />
-    <Compile Include="DataAdapters\FileSystem\Archive\Packers\TypeInfoPacker.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\EntityArchiveController.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\IEntityArchiveController.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\NullEntityArchiveController.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\PolygonArchiveController.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\QuadricArchiveController.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\SceneElementArchiveControllerBase.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\Controllers\TypeInfoArchiveController.cs" />
+    <Compile Include="DataAdapters\FileSystem\Archive\EntityArchiveControllerManager.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\StageArchiveManager.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\IArchiveEntry.cs" />
     <Compile Include="DataAdapters\FileSystem\Archive\XmlSerializerPool.cs" />
@@ -98,6 +98,7 @@
       <Name>VirtualScene.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
